Add Java counterpart of ByteCodeStrategy